hphp/test/zend/bad/Zend/tests/bug21478.php.skipif
<?php 
	if (version_compare(zend_version(), '2.0.0-dev', '<')) die('skip ZendEngine 2 is needed'); 
	if (!function_exists('stream_filter_register')) die('skip stream_filter_register() not available');
?>